适配屏幕和flash芯片

--- a/configs/f1c100s_nano_defconfig
+++ b/configs/f1c100s_nano_defconfig
@@ -205,7 +205,7 @@ CONFIG_VIDEO_LCD_DCLK_PHASE=1
 CONFIG_VIDEO_LCD_POWER=""
 CONFIG_VIDEO_LCD_RESET=""
 CONFIG_VIDEO_LCD_BL_EN=""
-CONFIG_VIDEO_LCD_BL_PWM=""
+CONFIG_VIDEO_LCD_BL_PWM="PE6"
 CONFIG_VIDEO_LCD_BL_PWM_ACTIVE_LOW=y
 # CONFIG_VIDEO_LCD_PANEL_I2C is not set
 CONFIG_VIDEO_LCD_IF_PARALLEL=y
@@ -284,8 +284,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 CONFIG_BOOTDELAY=2
 CONFIG_USE_BOOTARGS=y
 CONFIG_BOOTARGS="console=ttyS0,115200 panic=5 rootwait root=/dev/mtdblock3 rw rootfstype=jffs2"
-CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="run distro_bootcmd"
+# CONFIG_USE_BOOTCOMMAND is not set
 
 #
 # Console
@@ -482,8 +481,8 @@ CONFIG_RANDOM_UUID=y
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
 # CONFIG_CMD_I2C is not set
-# CONFIG_CMD_LOADB is not set
-# CONFIG_CMD_LOADS is not set
+CONFIG_CMD_LOADB=y
+CONFIG_CMD_LOADS=y
 CONFIG_CMD_MMC=y
 # CONFIG_CMD_NAND is not set
 # CONFIG_CMD_MMC_SPI is not set
