--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -140,7 +140,7 @@ CONFIG_DISTRO_DEFAULTS=y
 CONFIG_CMD_EXT2=y
 CONFIG_DM_STDIO=y
 CONFIG_CPU_ARM926EJS=y
-CONFIG_VIDEO_LCD_BL_PWM=""
+CONFIG_VIDEO_LCD_BL_PWM="PE6"
 CONFIG_CONSOLE_SCROLL_LINES=1
 CONFIG_LOCALVERSION=""
 CONFIG_MMC3_PINS=""
@@ -149,7 +149,7 @@ CONFIG_SUPPORT_SPL=y
 CONFIG_CMDLINE=y
 CONFIG_DTOC=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
-CONFIG_BOOTCOMMAND="run distro_bootcmd"
+CONFIG_CMD_LOADB=y
 CONFIG_CMD_RUN=y
 CONFIG_USB_KEYBOARD=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
@@ -169,7 +169,6 @@ CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR=y
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x400
 CONFIG_SYS_ARCH="arm"
 CONFIG_CMD_DM=y
-CONFIG_USE_BOOTCOMMAND=y
 CONFIG_EXPERT=y
 CONFIG_SYS_SOC="sunxi"
 CONFIG_MMC2_PINS=""
@@ -194,6 +193,7 @@ CONFIG_SPL_LDSCRIPT="arch/arm/cpu/arm926ejs/sunxi/u-boot-spl.lds"
 CONFIG_SPI_FLASH_BAR=y
 CONFIG_CMD_FDT=y
 CONFIG_SYS_USB_EVENT_POLL=y
+CONFIG_CMD_LOADS=y
 CONFIG_CMD_FAT=y
 CONFIG_VIDEO_LCD_POWER=""
 CONFIG_SPI_FLASH_MACRONIX=y
